--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,5 +1,5 @@
 :root {
-  /* Paleta de colores SplashMy */
+  /* Paleta de colores Fotomorfia */
   --color-primary: #00A6FB;
   --color-secondary: #0582CA;
   --color-tertiary: #006494;
